--- a/Photo Collection/Photo Collection/Base.lproj/Main.storyboard
+++ b/Photo Collection/Photo Collection/Base.lproj/Main.storyboard
@@ -115,6 +115,10 @@
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="M1R-Iq-Vx6">
                                                     <rect key="frame" x="0.0" y="0.0" width="175" height="148.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="175" id="FFW-Nu-Ee7"/>
+                                                        <constraint firstAttribute="height" constant="148.5" id="hj5-b4-gda"/>
+                                                    </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h1r-d4-T1B">
                                                     <rect key="frame" x="67" y="151.5" width="41.5" height="20.5"/>
