--- a/Photo Collection/Photo Collection/Base.lproj/Main.storyboard
+++ b/Photo Collection/Photo Collection/Base.lproj/Main.storyboard
@@ -28,7 +28,7 @@
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PyZ-jv-RIW">
                                         <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
-                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="100" id="FbC-M4-nN0"/>
                                             <constraint firstAttribute="width" constant="100" id="aI1-Na-Flk"/>
@@ -181,28 +181,42 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZYM-ad-hEL">
-                                <rect key="frame" x="46" y="184" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus.rectangle.fill.on.rectangle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ZYM-ad-hEL">
+                                <rect key="frame" x="69.5" y="170.5" width="275" height="174"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="275" id="GgP-xJ-TdS"/>
+                                    <constraint firstAttribute="height" constant="175" id="jEj-iS-RYd"/>
+                                </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bOf-y9-RWb">
-                                <rect key="frame" x="179" y="489" width="92" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Photo's title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uWc-X0-UJd">
+                                <rect key="frame" x="107" y="360" width="200" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="frS-US-BQN"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bOf-y9-RWb">
+                                <rect key="frame" x="69.5" y="170" width="275" height="175"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Add Photo"/>
+                                <buttonConfiguration key="configuration" style="plain" title=""/>
                                 <connections>
                                     <action selector="addPhotoButtonTapped:" destination="FCE-o1-Qd0" eventType="touchUpInside" id="Hcb-F1-JNi"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uWc-X0-UJd">
-                                <rect key="frame" x="128" y="386" width="97" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="beZ-1h-NZQ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ZYM-ad-hEL" firstAttribute="top" secondItem="beZ-1h-NZQ" secondAttribute="top" constant="30" id="1E6-z7-kjW"/>
+                            <constraint firstItem="bOf-y9-RWb" firstAttribute="top" secondItem="ZYM-ad-hEL" secondAttribute="top" id="8dO-bu-QvT"/>
+                            <constraint firstItem="uWc-X0-UJd" firstAttribute="centerX" secondItem="aex-lR-gow" secondAttribute="centerX" id="Ika-5F-2OO"/>
+                            <constraint firstItem="uWc-X0-UJd" firstAttribute="top" secondItem="ZYM-ad-hEL" secondAttribute="bottom" constant="15" id="Ors-4o-7E5"/>
+                            <constraint firstItem="bOf-y9-RWb" firstAttribute="trailing" secondItem="ZYM-ad-hEL" secondAttribute="trailing" id="P0G-3s-rgI"/>
+                            <constraint firstItem="ZYM-ad-hEL" firstAttribute="centerX" secondItem="aex-lR-gow" secondAttribute="centerX" id="dCA-Iy-2EJ"/>
+                            <constraint firstItem="bOf-y9-RWb" firstAttribute="leading" secondItem="ZYM-ad-hEL" secondAttribute="leading" id="kuc-kY-Yr5"/>
+                            <constraint firstItem="bOf-y9-RWb" firstAttribute="bottom" secondItem="ZYM-ad-hEL" secondAttribute="bottom" id="xCJ-2P-HTQ"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="qSf-dR-leU">
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="HZq-hG-d3g">
@@ -244,6 +258,7 @@
     </inferredMetricsTieBreakers>
     <resources>
         <image name="paintbrush.fill" catalog="system" width="122" height="128"/>
+        <image name="plus.rectangle.fill.on.rectangle.fill" catalog="system" width="128" height="97"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
