implemented the new photo picker instead  of the older image picker

--- a/Photo Collection/Photo Collection/Base.lproj/Main.storyboard
+++ b/Photo Collection/Photo Collection/Base.lproj/Main.storyboard
@@ -254,7 +254,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="oeN-CO-712"/>
+        <segue reference="src-0O-fYh"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="paintbrush.fill" catalog="system" width="122" height="128"/>
